# spotify-mp3tag-proxy

./: .env.example  LICENSE  README.md  Spotify API Proxy#Album + Artist.src  Spotify API Proxy#Album ID.src  Spotify#Album + Artist.src  Spotify#Album ID.src  json_idtag_example.csv  main.py  merge_dict.py  pyproject.toml  resp_mp3tag.json  resp_origin.json
